examples/integrations/oci/base/identity-se/app.yaml
#
# Copyright (c) 2021 Oracle and/or its affiliates. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: helidon-examples-integrations-oci-listregions-se
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helidon-examples-integrations-oci-listregions-se
        version: v1
    spec:
      containers:
      - name: helidon-examples-integrations-oci-listregions-se
        image: helidon-examples-integrations-oci-listregions-se
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: helidon-examples-integrations-oci-listregions-se
  labels:
    app: helidon-examples-integrations-oci-listregions-se
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
  selector:
    app: helidon-examples-integrations-oci-listregions-se
  sessionAffinity: None
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helidon-examples-integrations-oci-listregions-se
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /oci-listregions/(.*)
        backend:
          serviceName: helidon-examples-integrations-oci-listregions-se
          servicePort: 8080
